@@ -1,4 +1,6 @@
+MD5 5bb6ef9a35366c4ab0aad0917df8ea66 ed2k-gtk-gui-0.6.3.ebuild 1037
 MD5 09031eceea336cfb4ded59878cb7f392 ed2k-gtk-gui-0.6.2.ebuild 1031
-MD5 7f556fe4d622dcffc1407fa65ea880aa ChangeLog 952
+MD5 67b30ddd82b59ebcc7ae71ef9d6d3527 ChangeLog 1087
 MD5 8abcb326775f027b2e13f23344036e34 metadata.xml 224
 MD5 13e8dc777209f9f417a7864c662ddc9a files/digest-ed2k-gtk-gui-0.6.2 71
+MD5 0915bb19a7400f433dbd5e636aae20e3 files/digest-ed2k-gtk-gui-0.6.3 71
