@@ -1,8 +1,6 @@
-MD5 5b735274ed2059b89fae9ee23b7ccd92 overnet-0.51.2.ebuild 703
-MD5 4b019b65ab7be61cf010ee1e44421aaf overnet-0.53.3.ebuild 737
-MD5 92c0d13a102973dcb32e88173b82ee95 overnet-0.50.1.ebuild 714
-MD5 039d97a7f50b81c361a8a46e51e6a3e3 ChangeLog 1592
+MD5 0dc80990c5167bf814f1a01db24452e7 overnet-1.0.2.ebuild 684
+MD5 f67e1adabbb5dc5a5bdfa8947add4012 overnet-0.53.3.ebuild 733
+MD5 5d60c0aead0b338ede6b7de8f0a3e566 ChangeLog 1830
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
-MD5 4aa3312ad3dc997a03c29c2bcee2b728 files/digest-overnet-0.50.1 65
-MD5 3a03bede14cc1b15518226bbd86d638b files/digest-overnet-0.51.2 65
 MD5 1f1a14849f3a767dcac5cfff1409c885 files/digest-overnet-0.53.3 70
+MD5 4107178b7a8a6706b60d36a4a63e1032 files/digest-overnet-1.0.2 70
